test/corpus/expression/else.txt
=====================================
Empty else after variable
=====================================

fn main() {
  a else { }
}
---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (else_expression
            (expression
              (ident))
            (else_keyword)
            (body
              (brace_open)
              (brace_close)))))
      (brace_close))))

=====================================
Empty else after function call
=====================================

fn main() {
  a() else { }
}
---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (else_expression
            (expression
              (function_call
                (ident)
                (paren_open)
                (paren_close)))
            (else_keyword)
            (body
              (brace_open)
              (brace_close)))))
      (brace_close))))

=====================================
Yeet after else
=====================================

fn main() {
  a else { }!
}
---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (postfix_expression
            (expression
              (else_expression
                (expression
                  (ident))
                (else_keyword)
                (body
                  (brace_open)
                  (brace_close))))
            (postfix_operator
              (yeet_operator)))))
      (brace_close))))
