test/corpus/expression/fn_call.txt
=====================================
No arguments
=====================================

fn main() {
  call()
}
---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (function_call
            (ident)
            (paren_open)
            (paren_close))))
      (brace_close))))

=====================================
Explicit Semicolon
=====================================

fn main() {
  call();
  call();
  call();
}
---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (function_call
            (ident)
            (paren_open)
            (paren_close))))
      (statement
        (expression
          (function_call
            (ident)
            (paren_open)
            (paren_close))))
      (statement
        (expression
          (function_call
            (ident)
            (paren_open)
            (paren_close))))
      (brace_close))))

=====================================
Semicolon Insertion
=====================================

fn main() {
  call()
  call()
  call()
}
---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (function_call
            (ident)
            (paren_open)
            (paren_close))))
      (statement
        (expression
          (function_call
            (ident)
            (paren_open)
            (paren_close))))
      (statement
        (expression
          (function_call
            (ident)
            (paren_open)
            (paren_close))))
      (brace_close))))

=====================================
Single argument
=====================================

fn main() {
  call(a)
}
---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (function_call
            (ident)
            (paren_open)
            (function_call_arg
              (expression
                (ident)))
            (paren_close))))
      (brace_close))))

=====================================
Two arguments
=====================================

fn main() {
  add(a, b)
}
---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (function_call
            (ident)
            (paren_open)
            (function_call_arg
              (expression
                (ident)))
            (function_call_arg
              (expression
                (ident)))
            (paren_close))))
      (brace_close))))

=====================================
Mutable argument
=====================================

fn main() {
  call(mut a)
}
---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (function_call
            (ident)
            (paren_open)
            (function_call_arg
              (declaration_modifier
                (mut_keyword))
              (expression
                (ident)))
            (paren_close))))
      (brace_close))))

=====================================
Ref argument
=====================================

fn main() {
  call(ref a)
}
---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (function_call
            (ident)
            (paren_open)
            (function_call_arg
              (declaration_modifier
                (ref_keyword))
              (expression
                (ident)))
            (paren_close))))
      (brace_close))))

=====================================
Move argument
=====================================

fn main() {
  call(move a)
}
---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (function_call
            (ident)
            (paren_open)
            (function_call_arg
              (declaration_modifier
                (move_keyword))
              (expression
                (ident)))
            (paren_close))))
      (brace_close))))

=====================================
Postfix mutable argument
=====================================

fn main() {
  call(a.mut)
}
---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (function_call
            (ident)
            (paren_open)
            (function_call_arg
              (expression
                (argument_modifier_expression
                  (expression
                    (ident))
                  (member_call_operator)
                  (mut_keyword))))
            (paren_close))))
      (brace_close))))

=====================================
Postfix ref argument
=====================================

fn main() {
  call(a.ref)
}
---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (function_call
            (ident)
            (paren_open)
            (function_call_arg
              (expression
                (argument_modifier_expression
                  (expression
                    (ident))
                  (member_call_operator)
                  (ref_keyword))))
            (paren_close))))
      (brace_close))))

=====================================
Multi-Segment Namespace Call
=====================================

fn serve() {
    tokio::net::bind(addr)
}
---
(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (function_call
            namespace: (ident)
            (double_colon)
            namespace: (ident)
            (double_colon)
            name: (ident)
            (paren_open)
            (function_call_arg
              value: (expression
                (ident)))
            (paren_close))))
      (brace_close))))
