test/corpus/expression/infix.txt
=====================================
Arithmetic expression order
=====================================

fn main() {
  a + b * c
}

---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (arithmetic_expression
            (expression
              (ident))
            (plus)
            (expression
              (arithmetic_expression
                (expression
                  (ident))
                (multiply)
                (expression
                  (ident)))))))
      (brace_close))))

=====================================
Comparison expression order
=====================================

fn main() {
  a + b * c < 5 - 7
}

---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (comparison_expression
            (expression
              (arithmetic_expression
                (expression
                  (ident))
                (plus)
                (expression
                  (arithmetic_expression
                    (expression
                      (ident))
                    (multiply)
                    (expression
                      (ident))))))
            (less)
            (expression
              (arithmetic_expression
                (expression
                  (literal
                    (number_literal)))
                (minus)
                (expression
                  (literal
                    (number_literal))))))))
      (brace_close))))
