test/corpus/range.txt
===
Inclusive range
===
fn main() { let range = 0..=5 }
---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (declaration
          (declaration_modifier
            (let_keyword))
          (ident)
          (assign)
          (expression
            (range_expression
              (expression
                (literal
                  (number_literal)))
              (inclusive_range)
              (expression
                (literal
                  (number_literal)))))))
      (brace_close))))

===
Exclusive range
===
fn main() { let range = 0..<5 }
---

(source
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (declaration
          (declaration_modifier
            (let_keyword))
          (ident)
          (assign)
          (expression
            (range_expression
              (expression
                (literal
                  (number_literal)))
              (exclusive_range)
              (expression
                (literal
                  (number_literal)))))))
      (brace_close))))
